--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -23,18 +23,18 @@ code {
   align-items: center;
   text-align: center;
   margin: 0 5rem;
-  position: relative
+  position: relative;
 }
 
 .weather-info {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: 20px;
 }
 
 .weather-icon {
-  height: 5rem;
+  height: 4rem;
 }
 
 .footer {
@@ -45,12 +45,16 @@ code {
   height: 2rem;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .row {
   display: flex;
   justify-content: center;
+}
+
+.condition {
+  margin-bottom: 4rem;
 }
 
 h1,
@@ -65,17 +69,104 @@ a {
   color: var(--accent-color);
 }
 
+/* DROPDOWN */
+
+.dropdown {
+  cursor: pointer;
+}
+
+.dropdown ul,
+.dropdown li {
+  text-decoration: none;
+  text-transform: none;
+  list-style: none;
+}
+
+.dropdown li,
+.dropdown .title {
+  height: 3rem;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dropdown li {
+  border-top: none;
+}
+
+.dropdown li:hover {
+  background-color: #B9E0CF;
+}
+
+.dropdown .title {
+  margin: 0em 4em;
+  position: relative;
+  border-radius: 5px;
+}
+
+.dropdown .title:after {
+  content: '';
+  position: absolute;
+  right: .5rem;
+  height: 1.5rem;
+  width: 1.5rem;
+  background: url('./caret-down.svg') no-repeat center center;
+  background-size: contain;
+  color: var(--accent-color);
+  transition: all .3s;
+}
+
+.dropdown.active .title {
+  border-radius: 5px 5px 0 0;
+}
+
+.dropdown.active .title:after {
+  transform: rotate(180deg);
+  transition: all .3s;
+}
+
+.dropdown .list .item:last-child {
+  border-radius: 0 0 5px 5px;
+}
+
+.dropdown.active .list .item:last-child {
+  margin-bottom: 4rem;
+}
+
+.dropdown .list {
+    position: relative;
+    padding: 0em 4em;
+    border: 0;
+    border-top: 0;
+    overflow: hidden;
+    max-height:0;
+    margin: 0;
+    transition: all 0.5s;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.dropdown.active .list {
+  transition: all 1s;
+    max-height: auto;
+    min-height:1px;
+    max-height:999px;
+}
+
+/* LOADING DROPLET ANIMATION */
+
 .loading {
   display: flex;
   height: 300px;
   align-items: center;
+  justify-content: center;
 }
 
 .droplet {
   height: 16px;
   width: 16px;
   background-size: contain;
-  background-image: url("./icon.jpg");
+  background-image: url("./droplet.svg");
 }
 
 .droplet:nth-child(1) {
@@ -89,17 +180,18 @@ a {
   animation: loading 0.8s linear 0.3s infinite;
 }
 
+/* ANIMATIONS */
+
 .fadeInUp {
-    animation-name: fadeInUp;
-    animation-duration: 1s;
+  animation-name: fadeInUp;
+  animation-duration: 1s;
 }
 
-.fadeInDown{
-    animation-name: fadeInDown;
-    animation-duration: 1s;
-    animation-timing-function: ease-in;
+.fadeInDown {
+  animation-name: fadeInDown;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
 }
-
 
 @keyframes loading {
   0% {
@@ -116,20 +208,20 @@ a {
 }
 
 @keyframes fadeInUp {
-    from{
-        opacity: 0;
-        transform: translate3d(0, 100%, 0);
-    }
-    to {
-        opacity: 1;
-        transform: none;
-    }
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
 }
 
 @media (max-width: 1400px) {
   .App {
     display: block;
-    margin: 0 .5rem;
+    margin: 0 0.5rem;
     flex-direction: column;
   }
   .footer a {
