--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -135,6 +135,9 @@ a {
 .dropdown .title {
   position: relative;
   border-radius: 5px;
+  font-family: "Amatic SC", cursive;
+  font-weight: 700;
+  font-size: 24px;
 }
 
 .dropdown .title:after {
